# SandSim

./: CMakeLists.txt  Config.h  README.md  SandMap.cpp  SandMap.h  Tile.h  globals.h  main.cpp
Tile/: Tile.cpp
brush/: brush.cpp  brush.h
components/: Button.cpp  Button.h  Slider.cpp  Slider.h
sandmap/: SandMap.cpp  SandMap.h
utils/: color_utils.cpp  color_utils.h
